--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,19 @@ header {
     justify-content: center;
     background-color: #202122;
 }
+
+nav {
+    width: 94%;
+    height: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+nav h1 a {
+    text-decoration: none;
+    color: #e9ff74;
+    font-family: 'Libre Baskerville', serif;
+}
