--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,56 @@ nav ul {
 
 .list-item a {
     text-decoration: none;
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     color: white;
     font-family: 'Kanit', sans-serif;
+}
+
+
+
+
+/* Main */
+
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: auto;
+    flex-wrap: wrap;
+}
+
+#home {
+    width: 94%;
+    min-height: calc(100vh - 130px);
+    background-color: #CCEEBC;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 30px;
+    text-align: center;
+    margin-top: 80px;
+    white-space: nowrap;
+    scroll-margin-top: 100px;
+    margin-bottom: 70px;
+}
+
+
+#home h2 {
+    font-size: 3.1rem;
+    color: black;
+    font-family: 'Poppins', sans-serif;
+    margin-bottom: 4rem;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+#home p {
+    font-size: 1.6rem;
+    color: black;
+    font-family: 'Poppins', sans-serif;
+    white-space: normal; /* Allow line breaks */
+    padding-left: 12px;
+    padding-right: 12px;
 }
