Add 'savings' section to index.html and apply styling
- Added 'savings' section to index.html for displaying information about high-interest savings accounts
- Applied CSS styles to the 'savings' section for improved visual appearance and text alignment

--- a/styles.css
+++ b/styles.css
@@ -100,3 +100,35 @@ main {
     padding-left: 12px;
     padding-right: 12px;
 }
+
+
+#savings {
+    width: 94%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 30px;
+    scroll-margin-top: 110px;
+}
+
+#savings-wordings {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    width: 94%;
+    margin-bottom: 20px;
+}
+
+#savings-wordings h2 {
+    font-size: 2rem;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    margin-bottom: 5px;
+}
+
+#savings-wordings p {
+    font-size: 1.3rem;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+}
