--- a/styles.css
+++ b/styles.css
@@ -142,7 +142,7 @@ main {
     display: grid;
     width: 100%;
     height: auto;
-    grid-template-columns: 1fr 2fr 1fr 1fr;
+    grid-template-columns: 1fr 2fr 2fr 1fr 1fr;
     text-align: center;
     border-radius: 30px;
 }
@@ -163,6 +163,20 @@ main {
 .banks-header p {
     font-size: 1.4rem;
     font-family: 'Poppins', sans-serif;
+}
+
+.bank-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+.bank-header p {
+    font-size: 1.3rem;
+    font-family: 'Poppins', sans-serif;
+    margin-right: 5px;
 }
 
 .banks-logo {
