Fix the code on script file for the interest-details and add styling to the footer

--- a/styles.css
+++ b/styles.css
@@ -188,7 +188,7 @@ main {
 }
 
 .banks-logo img {
-    width: 25%;
+    width: 30%;
     height: auto;
 }
 
@@ -205,18 +205,43 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 1.2rem;
     font-family: 'Poppins', sans-serif;  
 }
 
-.interest {
-    font-size: 1.2rem;
-    margin-right: 22px;
-}
 
-.expand-button-two {
+.expand-button {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 1.2rem;
+}
+
+.interest-details {
+    display: none;
+    grid-column: 1 / span 4; /* Cover all five columns */
+    position: relative;
+    width: 100%;
+}
+
+.interest-details.visible {
+    display: flex;
+    padding-left: 60px;
+    padding-top: 18px;
+    padding-bottom: 18px;
+}
+
+.interest-details p {
+    text-align: left;
+    font-family: 'Poppins', sans-serif;
+}
+
+
+.expand-button-2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2rem;
 }
 
 .fa-chevron-up:hover,
@@ -226,17 +251,66 @@ main {
 
 .key-features {
     display: none;
-    grid-column: 1 / span 5; /* Cover all four columns */
+    grid-column: 1 / span 5; /* Cover all five columns */
     position: relative;
     width: 100%;
 }
 
 .key-features.visible {
     display: flex;
-    min-height: 100px;
+    padding-left: 60px;
+    padding-top: 18px;
+    padding-bottom: 18px;
 }
 
 .key-features p {
     text-align: left;
     font-family: 'Poppins', sans-serif;
 }
+
+
+
+.update {
+    display: flex;
+    width: 98%;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.update i {
+    font-size: .9rem;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    margin-top: 5px;
+}
+
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#footer-content {
+    background-color: #202122;
+    border-radius: 30px;
+    width: 94%;
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    flex-direction: column;
+    border: 1px solid #e9ff74;
+}
+
+#footer-content p {
+    font-size: 1.2rem;
+    color: white;
+    font-family: 'Kanit', sans-serif;
+    white-space: normal; /* Allow line breaks */
+    padding-left: 12px;
+    padding-right: 12px;
+}
+
