--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,7 @@ main {
 }
 
 .bank-header p {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     font-family: 'Poppins', sans-serif;
     margin-right: 5px;
 }
@@ -224,13 +224,21 @@ main {
 
 .interest-details.visible {
     display: flex;
-    padding-left: 60px;
-    padding-top: 18px;
+    padding-left: 87px;
+    padding-top: 10px;
     padding-bottom: 18px;
 }
 
-.interest-details p {
+.details-header {
     text-align: left;
+    font-size: 1rem;
+    font-family: 'Poppins', sans-serif;
+    padding-bottom: 5px;
+}
+
+.interest-details ul li {
+    text-align: left;
+    font-size: 1rem;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -256,16 +264,16 @@ main {
 
 .key-features.visible {
     display: flex;
-    padding-left: 60px;
-    padding-top: 18px;
+    padding-left: 87px;
+    padding-top: 10px;
     padding-bottom: 18px;
 }
 
-.key-features p {
+.key-features ul li {
     text-align: left;
+    font-size: 1rem;
     font-family: 'Poppins', sans-serif;
 }
-
 
 
 .update {
